# lex-au-search

./: .env.example  .gitignore  CLAUDE.md  README.md  STACK.md  pyproject.toml
docs/superpowers/plans/: 2026-06-19-lex-au-search.md  2026-07-14-reingest-corrected-corpus.md
scripts/: colab_ingest.sh  verify_reingest.py
src/lexausearch/: api.py  cache.py  chunker.py  cli.py  indexer.py  mcp.py  models.py  refs.py  searcher.py
tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_indexer.py  test_mcp.py  test_models.py  test_refs.py  test_searcher.py
