[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "lex-au-search"
version = "0.4.2"
description = "Hybrid search over Australian Commonwealth legislation — retrieval layer of the AU Legislative Intelligence Stack"
authors = [{name = "Ching Chew", email = "ching.chew@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3",
    "qdrant-client[fastembed]>=1.9",
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "uvicorn>=0.30",
    "mcp>=1.0",
    "click>=8.1",
]

[project.scripts]
lex-au-search = "lexausearch.cli:cli"

[project.urls]
Repository = "https://github.com/cchew/lex-au-search"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.0",
    "httpx>=0.27",
]
gpu = [
    "onnxruntime-gpu>=1.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
